--- a/1/2434map.html
+++ b/1/2434map.html
@@ -1,6 +1,26 @@
 <html><head>
+<meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
+<link href="https://use.fontawesome.com/releases/v5.0.8/css/all.css" rel="stylesheet">
 <script src="js/openseadragon.js"></script>
 <script src="js/openseadragon-bookmark-url.js"></script>
+
+<style>
+/*
+f05b
+f066
+f065
+f067
+*/
+contentDiv::before {
+	content: '\f05b';
+	font-family: 'Font Awesome 5 Free';
+	font-weight: 900;/* 必須 */
+	color: #D60000;
+	top: 50%;
+	left: 50%;
+}
+</style>
+
 </head><body>
 <!-- 画像ビューアを表示させるDIV -->
 <div id="contentDiv"></div>
