--- a/1/2434map.html
+++ b/1/2434map.html
@@ -16,6 +16,8 @@ contentDiv::before {
 	font-family: 'Font Awesome 5 Free';
 	font-weight: 900;/* 必須 */
 	color: #D60000;
+	position: relative;
+	z-index: 99;
 	top: 50%;
 	left: 50%;
 }
