--- a/1/2434map.html
+++ b/1/2434map.html
@@ -11,7 +11,7 @@ f066
 f065
 f067
 */
-contentDiv::before {
+#contentDiv::before {
 	content: '\f05b';
 	font-family: 'Font Awesome 5 Free';
 	font-weight: 900;/* 必須 */
