--- a/1/2434map.html
+++ b/1/2434map.html
@@ -11,6 +11,10 @@ f066
 f065
 f067
 */
+#contentDiv {
+	width:100%;
+	height:100%;
+}
 #contentDiv::before {
 	content: '\f05b';
 	font-family: 'Font Awesome 5 Free';
