--- a/1/2434map.html
+++ b/1/2434map.html
@@ -20,7 +20,7 @@ f067
 	font-family: 'Font Awesome 5 Free';
 	font-weight: 900;/* 必須 */
 	color: #D60000;
-	position: relative;
+	position: absolute;
 	z-index: 99;
 	top: 50%;
 	left: 50%;
