--- a/1/2434map.html
+++ b/1/2434map.html
@@ -11,13 +11,18 @@ f066
 f065
 f067
 */
+* {
+	margin  : 0px;
+	padding : 0px;
+}
 #contentDiv {
 	width:100%;
 	height:100%;
 }
 #contentDiv::before {
-	content: '\f05b';
+	content: '\f066';
 	font-family: 'Font Awesome 5 Free';
+	font-size: 24px; font-size: 2.4rem;
 	font-weight: 900;/* 必須 */
 	color: #D60000;
 	position: absolute;
@@ -32,13 +37,13 @@ f067
 <div id="contentDiv"></div>
 
 <script type="text/javascript">
-    var viewer = OpenSeadragon({
-        id:              "contentDiv",
-        prefixUrl:       "2434map_files/",
-        tileSources:     "2434map.dzi",
-        showNavigator:  true
-    });
-    viewer.bookmarkUrl();
+	var viewer = OpenSeadragon({
+		id:              "contentDiv",
+		prefixUrl:       "2434map_files/",
+		tileSources:     "2434map.dzi",
+		showNavigator:  true
+	});
+	viewer.bookmarkUrl();
 </script>
 
 </body>
