--- a/1/2434map.html
+++ b/1/2434map.html
@@ -20,15 +20,15 @@ f067
 	height:100%;
 }
 #contentDiv::before {
-	content: '\f066';
+	content: '\f065';
 	font-family: 'Font Awesome 5 Free';
-	font-size: 24px; font-size: 2.4rem;
+	font-size: 18px; font-size: 1.8rem;
 	font-weight: 900;/* 必須 */
 	color: #D60000;
 	position: absolute;
 	z-index: 99;
-	top: 50%;
-	left: 50%;
+	top: calc(50% - 9px);
+	left: calc(50% - 9px);
 }
 </style>
 
