--- a/1/2434map.html
+++ b/1/2434map.html
@@ -20,7 +20,7 @@ f067
 	height:100%;
 }
 #contentDiv::before {
-	content: '\f067';
+	content: '\f05b';
 	font-family: 'Font Awesome 5 Free';
 	font-size: 18px; font-size: 1.8rem;
 	font-weight: 900;/* 必須 */
@@ -30,6 +30,7 @@ f067
 	top: calc(50% - 9px);
 	left: calc(50% - 9px);
 	user-select: none;
+	pointer-events: none;
 }
 </style>
 
