--- a/1/2434map.html
+++ b/1/2434map.html
@@ -1,16 +1,8 @@
 <html><head>
-<meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
-<link href="https://use.fontawesome.com/releases/v5.0.8/css/all.css" rel="stylesheet">
 <script src="js/openseadragon.js"></script>
 <script src="js/openseadragon-bookmark-url.js"></script>
 
 <style>
-/*
-f05b
-f066
-f065
-f067
-*/
 * {
 	margin  : 0px;
 	padding : 0px;
@@ -20,10 +12,7 @@ f067
 	height:100%;
 }
 #contentDiv::before {
-	content: '\f05b';
-	font-family: 'Font Awesome 5 Free';
-	font-size: 18px; font-size: 1.8rem;
-	font-weight: 900;/* 必須 */
+	content: url("center.gif")
 	color: #D60000;
 	position: absolute;
 	z-index: 99;
