--- a/1/2434map.html
+++ b/1/2434map.html
@@ -12,7 +12,7 @@
 	height:100%;
 }
 #contentDiv::before {
-	content: url("center.gif")
+	content: url("./center.gif")
 	color: #D60000;
 	position: absolute;
 	z-index: 99;
