--- a/1/2434map.html
+++ b/1/2434map.html
@@ -12,8 +12,7 @@
 	height:100%;
 }
 #contentDiv::before {
-	content: url("./center.gif")
-	color: #D60000;
+	content: url("./center.gif");
 	position: absolute;
 	z-index: 99;
 	top: calc(50% - 9px);
