--- a/1/2434map.html
+++ b/1/2434map.html
@@ -30,11 +30,26 @@
 	var viewer = OpenSeadragon({
 		id:              "contentDiv",
 		prefixUrl:       "2434map_files/",
-		tileSources:     "2434map.dzi",
+		tileSources:   {
+			Image: {
+				xmlns:	  "http://schemas.microsoft.com/deepzoom/2008",
+				Url:	  "2434map_files/",
+				Format:   "jpg", 
+				Overlap:  "2", 
+				TileSize: "256",
+				Size: {
+					Height: "12800",
+					Width:	"16000"
+				}
+			}
+		}
 		showNavigator:  true
 	});
 	viewer.bookmarkUrl();
 </script>
+
+
+
 
 </body>
 </html>
