--- a/1/index.html
+++ b/1/index.html
@@ -21,7 +21,7 @@
 		tileSources: {
 			Image: {
 				xmlns: "http://schemas.microsoft.com/deepzoom/2008", 
-				Url: "2434map_tiles/", 
+				Url: "tiles/", 
 				Format: "jpg", 
 				Overlap: "2", 
 				TileSize: "256",
